[package]
name = "credit-card-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.89"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.4"
dialoguer = { version = "0.12.0", default-features = false }
google-drive = "0.7.0"
hyper-util = { version = "0.1", features = ["client", "client-legacy", "tokio"] }
indicatif = "0.18"
oauth2 = { version = "5.0", default-features = false, features = ["reqwest", "rustls-tls"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "charset", "http2", "macos-system-configuration"] }
rust_decimal = { version = "1.39.0", features = ["macros", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sheets = "0.7.0"
thiserror = "2.0"
tiny_http = "0.12"
tokio = { version = "1.48", features = ["full"] }
toml = "0.9"
tracing = "0.1"
tracing-indicatif = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
xdg = "3.0"
yup-oauth2 = "12.0"
